--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -12,7 +12,7 @@ MIC_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCE
 MIC_PORT=8080
 
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-a72152d0
+mpl_AMI=ami-01afd276
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
@@ -20,6 +20,7 @@ mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
+mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s 
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
