Now it handles automatically all the credentials.

--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -19,7 +19,8 @@ mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
-mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s 
+mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s
+mpl_REMOTE_PATH=/tmp/scalingrulestests
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
