--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -19,8 +19,10 @@ mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
-mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s
+mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s >> /home/ubuntu/cloudmldaemon.log
 mpl_REMOTE_PATH=/tmp/scalingrulestests
+mpl_DELETE_FILES=/home/ubuntu/cloudmldaemon.log
+mpl_RETRIEVE_FILES=/home/ubuntu/cloudmldaemon.log
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
