--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -19,9 +19,9 @@ mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
-mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s >> /home/ubuntu/cloudmldaemon.log
+mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s >> /home/ubuntu/logs/cloudmldaemon.log
 mpl_REMOTE_PATH=/tmp/scalingrulestests
-mpl_RETRIEVE_FILES=/home/ubuntu/cloudmldaemon.log
+mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
