--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -18,10 +18,10 @@ mpl_DISK=8
 mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
-mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
+mpl_STARTER=sudo mkdir -p /vagrant && sudo unlink /vagrant/graphite-conf && sudo ln -s /home/ubuntu/tower4clouds/observers/influxdb-graphite-grafana/graphite-conf /vagrant/graphite-conf && bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter
 mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s >> /home/ubuntu/logs/cloudmldaemon.log
 mpl_REMOTE_PATH=/tmp/scalingrulestests
-mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log
+mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.2-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.2-SNAPSHOT/hdb.log
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
