Updated the AMIs.

--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -4,22 +4,22 @@ SECURITY_GROUP_NAME=ScalingRulesTests
 CLOUDML_PORT=9000
 MONITORING_PLATFORM_PORT=8170
 
-MIC_AMI=ami-13067b64
+MIC_AMI=ami-ab3f43dc
 MIC_STARTER=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/snapshotMICStarter 127.0.0.1 %s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
 MIC_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 MIC_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 MIC_PORT=8080
 
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-01afd276
+mpl_AMI=ami-ad3f43da
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
 mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
-mpl_STARTER=sudo mkdir -p /vagrant && sudo unlink /vagrant/graphite-conf && sudo ln -s /home/ubuntu/tower4clouds/observers/influxdb-graphite-grafana/graphite-conf /vagrant/graphite-conf && bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter && bash /home/ubuntu/tower4clouds/scripts/stop-local-platform.sh && bash /home/ubuntu/tower4clouds/scripts/start-remote-platform.sh %s
-mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s >> /home/ubuntu/logs/cloudmldaemon.log
+mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter %s
+mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s
 mpl_REMOTE_PATH=/tmp/scalingrulestests
 mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.2-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.2-SNAPSHOT/hdb.log
 
