--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -14,7 +14,7 @@ client_JMETER_PATH = /home/ubuntu/apache-jmeter-2.12
 client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
 
 mic_KEYPAIR_NAME=desantis-ireland
-mic_AMI=ami-13067b64
+mic_AMI=ami-ab3f43dc
 mic_SIZE=m3.large
 mic_INSTANCES=1
 mic_DISK=8
@@ -36,14 +36,14 @@ database_SSH_USER=ubuntu
 database_SSH_PASS=ubuntu
 
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-01afd276
+mpl_AMI=ami-ad3f43da
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
 mpl_OS=Linux/UNIX
 mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
-mpl_STARTER=sudo mkdir -p /vagrant && sudo unlink /vagrant/graphite-conf && sudo ln -s /home/ubuntu/tower4clouds/observers/influxdb-graphite-grafana/graphite-conf /vagrant/graphite-conf && bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter && bash /home/ubuntu/tower4clouds/scripts/stop-local-platform.sh && bash /home/ubuntu/tower4clouds/scripts/start-remote-platform.sh %s
+mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter %s
 mpl_RETRIEVE_FILES=/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.2-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.2-SNAPSHOT/hdb.log
 
 sda_KEYPAIR_NAME=desantis-ireland
