--- a/modaclouds-sdatests/pom.xml
+++ b/modaclouds-sdatests/pom.xml
@@ -7,7 +7,7 @@
         <version>0.1</version>
     </parent>
 	<artifactId>sdatests</artifactId>
-	<version>0.0.6</version>
+	<version>0.0.7</version>
     <name>MODAClouds - SDA Tests</name>
 
 	<repositories>
@@ -116,6 +116,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
         </dependency>
 	</dependencies>
 </project>
