--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -21,7 +21,7 @@ mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter %s
 mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s
 mpl_REMOTE_PATH=/tmp/scalingrulestests
-mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.2-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.2-SNAPSHOT/hdb.log
+mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/CloudML-Shell.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.2-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.2-SNAPSHOT/hdb.log
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
