--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -11,7 +11,7 @@ MIC_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCE
 MIC_PORT=8080
 
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-0bb8c77c
+mpl_AMI=ami-593e402e
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
@@ -22,6 +22,8 @@ mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStar
 mpl_CLOUDML_STARTER=bash /home/ubuntu/CloudMLDaemon -port %s
 mpl_REMOTE_PATH=/tmp/scalingrulestests
 mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/CloudML-Shell.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.2-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.2-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.2-SNAPSHOT/hdb.log
+mpl_CLOUDML_PORT=9000
+mpl_MP_PORT=8170
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
