--- a/modaclouds-sdatests/pom.xml
+++ b/modaclouds-sdatests/pom.xml
@@ -122,5 +122,10 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
 	</dependencies>
 </project>
