--- a/sdaValidator/pom.xml
+++ b/sdaValidator/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>it.polimi.modaclouds.monitoring</groupId>
     <artifactId>sdaValidator</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <packaging>jar</packaging>
     <name>MODAClouds - SDA Validator</name>
     <properties>
@@ -34,6 +34,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
         </dependency>
     </dependencies>
     <build>
