--- a/modaclouds-scalingrules/pom.xml
+++ b/modaclouds-scalingrules/pom.xml
@@ -15,7 +15,7 @@
 		<version>0.1</version>
 	</parent>
 	<artifactId>scalingrules</artifactId>
-	<version>0.0.6</version>
+	<version>0.0.7</version>
 	<name>MODAClouds - Scaling Rules</name>
 
 	<licenses>
@@ -365,11 +365,6 @@
 			<version>2.6</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.10</version>
-		</dependency>
-		<dependency>
 			<groupId>com.beust</groupId>
 			<artifactId>jcommander</artifactId>
 			<version>1.47</version>
@@ -382,7 +377,12 @@
 		<dependency>
 			<groupId>it.cloud.cloud-runner</groupId>
 			<artifactId>cloud-runner</artifactId>
-			<version>0.0.5</version>
+			<version>0.0.6</version>
 		</dependency>
+		<dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+        </dependency>
 	</dependencies>
 </project>
