Updated the gitignores.

--- a/modaclouds-scalingrules/.gitignore
+++ b/modaclouds-scalingrules/.gitignore
@@ -2,6 +2,7 @@
 /bin
 /src/it/polimi/modaclouds/scalingrules/schemas
 sun-jaxb.episode
-.DS_Store
 /securitygroupcreated.txt
 /tests
+debug*.log
+.DS_Store
