Now it is possible to specify the parameters for the JVM before calling JMeter.

--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -12,6 +12,7 @@ client_SSH_PASS=ubuntu
 client_REMOTE_PATH=/tmp/sdatests
 client_JMETER_PATH = /home/ubuntu/apache-jmeter-2.12
 client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
+client_JAVA_PARAMETERS=-Xms2g -Xmx2g
 
 mic_KEYPAIR_NAME=desantis-ireland
 mic_AMI=ami-ab3f43dc
