--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -36,3 +36,4 @@ client_SSH_PASS=ubuntu
 client_REMOTE_PATH=/tmp/scalingrulestests
 client_JMETER_PATH = /home/ubuntu/apache-jmeter-2.12
 client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
+client_JAVA_PARAMETERS=-Xms2g -Xmx2g
