Now it also downloads the data from CloudWatch!

--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -9,6 +9,7 @@ MIC_STARTER=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/snapsho
 MIC_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 MIC_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 MIC_PORT=8080
+MIC_METRICS=CPUUtilization
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-09215a7e
@@ -24,6 +25,7 @@ mpl_REMOTE_PATH=/tmp/scalingrulestests
 mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/CloudML-Shell.log;/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3-SNAPSHOT/hdb.log
 mpl_CLOUDML_PORT=9000
 mpl_MP_PORT=8170
+mpl_METRICS=CPUUtilization
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
@@ -37,3 +39,4 @@ client_REMOTE_PATH=/tmp/scalingrulestests
 client_JMETER_PATH = /home/ubuntu/apache-jmeter-2.12
 client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
 client_JAVA_PARAMETERS=-Xms2g -Xmx2g
+client_METRICS=CPUUtilization
