--- a/modaclouds-sdatests/pom.xml
+++ b/modaclouds-sdatests/pom.xml
@@ -127,5 +127,10 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>2.7.8</version>
+        </dependency>
 	</dependencies>
 </project>
