Updated the AMI number.

--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -43,7 +43,7 @@ database_SSH_PASS=ubuntu
 database_METRICS=CPUUtilization
 
 mpl_KEYPAIR_NAME=desantis-ireland
-mpl_AMI=ami-aac780dd
+mpl_AMI=ami-3add9a4d
 mpl_SIZE=m3.large
 mpl_INSTANCES=1
 mpl_DISK=8
@@ -52,6 +52,6 @@ mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter %s
 mpl_DATA2STDOUT_STARTER=cd /home/ubuntu/data2stdout && nohup bash /home/ubuntu/data2stdout/tower4clouds-data2stdout 8001 > /home/ubuntu/logs/data2stdout.log 2>&1
-mpl_RETRIEVE_FILES=/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3-SNAPSHOT/hdb.log;/home/ubuntu/logs/data2stdout.log;/home/ubuntu/sda.out;/home/ubuntu/cpu.out;/home/ubuntu/cpuSteal.out;/home/ubuntu/rt.out;/home/ubuntu/d.out;/home/ubuntu/wlforFirst.out;/home/ubuntu/wlforSecond.out;/home/ubuntu/wlforThird.out;/home/ubuntu/wlforFourth.out;/home/ubuntu/wlforFifth.out;/home/ubuntu/wl.out;/home/ubuntu/thresholds.out;/home/ubuntu/modaclouds-sda/SDAData.mat
+mpl_RETRIEVE_FILES=/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3-SNAPSHOT/hdb.log;/home/ubuntu/logs/data2stdout.log;/home/ubuntu/sda.out;/home/ubuntu/cpu.out;/home/ubuntu/cpuSteal.out;/home/ubuntu/rt.out;/home/ubuntu/d.out;/home/ubuntu/wlforFirst.out;/home/ubuntu/wlforSecond.out;/home/ubuntu/wlforThird.out;/home/ubuntu/wlforFourth.out;/home/ubuntu/wlforFifth.out;/home/ubuntu/wl.out;/home/ubuntu/thresholds.out;/home/ubuntu/modaclouds-sda/SDAData.mat;/home/ubuntu/modaclouds-sda/Forecastingregister_-571442537.mat;/home/ubuntu/modaclouds-sda/ForecastingsaveAnswers_-571442537.mat;/home/ubuntu/modaclouds-sda/ForecastinganswerQuestions_-571442537.mat
 mpl_SDA_STARTER=bash /home/ubuntu/updateSDA && bash /home/ubuntu/startSDA %s
 mpl_METRICS=CPUUtilization
