--- a/http-agent-helper/.gitignore
+++ b/http-agent-helper/.gitignore
@@ -3,6 +3,4 @@
 .project
 .DS_Store
 /target
-src/main/resources/META-INF/configuration.xml
-src/main/resources/META-INF/persistence.xml
-src/main/resources/META-INF/queue.xml
+debug*.log
