--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -32,6 +32,23 @@ mic_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS
 mic_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 mic_METRICS=CPUUtilization
 
+httpagent_KEYPAIR_NAME=desantis-ireland
+httpagent_AMI=ami-a0d797d7
+httpagent_SIZE=m3.large
+httpagent_INSTANCES=1
+httpagent_DISK=8
+httpagent_OS=Linux/UNIX
+httpagent_SSH_USER=ubuntu
+httpagent_SSH_PASS=ubuntu
+httpagent_PROTOCOL=http
+httpagent_PORT=8080
+httpagent_STARTER0=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/startHTTPAgent %2$s
+httpagent_STARTER1=source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
+httpagent_RETRIEVE_FILES=/tmp/imperial_dc.log
+httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
+httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
+httpagent_METRICS=CPUUtilization
+
 database_KEYPAIR_NAME=desantis-ireland
 database_AMI=ami-62289215
 database_SIZE=m3.large
