--- a/modaclouds-scalingrules/pom.xml
+++ b/modaclouds-scalingrules/pom.xml
@@ -15,7 +15,7 @@
 		<version>0.1</version>
 	</parent>
 	<artifactId>scalingrules</artifactId>
-	<version>0.0.10</version>
+	<version>0.0.11</version>
 	<name>MODAClouds - Scaling Rules</name>
 
 	<licenses>
@@ -316,7 +316,7 @@
 		<dependency>
 			<groupId>it.polimi.tower4clouds</groupId>
 			<artifactId>rules</artifactId>
-			<version>0.2.1</version>
+			<version>0.3-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>log4j-over-slf4j</artifactId>
@@ -376,5 +376,16 @@
 			<artifactId>janino</artifactId>
 			<version>2.7.8</version>
 		</dependency>
+		<dependency>
+            <groupId>it.polimi.tower4clouds</groupId>
+            <artifactId>manager-api</artifactId>
+            <version>0.3-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>log4j-over-slf4j</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 	</dependencies>
 </project>
