--- a/modaclouds-scalingrules/resources/configuration.properties
+++ b/modaclouds-scalingrules/resources/configuration.properties
@@ -19,6 +19,24 @@ mic_RETRIEVE_FILES=/tmp/imperial_dc.log;/home/ubuntu/nohup-glass.out;/home/ubunt
 mic_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 mic_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 mic_METRICS=CPUUtilization
+mic_NAME=MiC
+
+httpagent_KEYPAIR_NAME=desantis-ireland
+httpagent_AMI=ami-a0d797d7
+httpagent_SIZE=m3.large
+httpagent_INSTANCES=1
+httpagent_DISK=8
+httpagent_OS=Linux/UNIX
+httpagent_SSH_USER=ubuntu
+httpagent_SSH_PASS=ubuntu
+httpagent_PROTOCOL=http
+httpagent_PORT=8080
+httpagent_STARTER=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/startHTTPAgent %2$s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
+httpagent_RETRIEVE_FILES=/tmp/imperial_dc.log
+httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
+httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
+httpagent_METRICS=CPUUtilization
+httpagent_NAME=HTTPAgent
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-c40141b3
@@ -35,6 +53,7 @@ mpl_RETRIEVE_FILES=/home/ubuntu/logs/cloudmldaemon.log;/home/ubuntu/CloudML-Shel
 mpl_CLOUDML_PORT=9000
 mpl_MP_PORT=8170
 mpl_METRICS=CPUUtilization
+mpl_NAME=MPLSDA
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-8144d9f6
@@ -49,3 +68,4 @@ client_JMETER_PATH=/home/ubuntu/apache-jmeter-2.12
 client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
 client_JAVA_PARAMETERS=-Xms7g -Xmx7g
 client_METRICS=CPUUtilization
+client_NAME=JMeter
