--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -14,6 +14,7 @@ client_JMETER_PATH=/home/ubuntu/apache-jmeter-2.12
 client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
 client_JAVA_PARAMETERS=-Xms7g -Xmx7g
 client_METRICS=CPUUtilization
+client_NAME=JMeter
 
 mic_KEYPAIR_NAME=desantis-ireland
 mic_AMI=ami-306b2a47
@@ -31,6 +32,7 @@ mic_RETRIEVE_FILES=/tmp/imperial_dc.log;/home/ubuntu/nohup-glass.out;/home/ubunt
 mic_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 mic_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 mic_METRICS=CPUUtilization
+mic_NAME=MiC
 
 httpagent_KEYPAIR_NAME=desantis-ireland
 httpagent_AMI=ami-a0d797d7
@@ -48,6 +50,7 @@ httpagent_RETRIEVE_FILES=/tmp/imperial_dc.log
 httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 httpagent_METRICS=CPUUtilization
+httpagent_NAME=HTTPAgent
 
 database_KEYPAIR_NAME=desantis-ireland
 database_AMI=ami-62289215
@@ -58,6 +61,7 @@ database_OS=Linux/UNIX
 database_SSH_USER=ubuntu
 database_SSH_PASS=ubuntu
 database_METRICS=CPUUtilization
+database_NAME=DataBase
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-c40141b3
@@ -69,6 +73,7 @@ mpl_SSH_USER=ubuntu
 mpl_SSH_PASS=ubuntu
 mpl_STARTER=bash /home/ubuntu/updatePlatform && bash /home/ubuntu/snapshotMPStarter %s
 mpl_DATA2STDOUT_STARTER=cd /home/ubuntu/data2stdout && nohup bash /home/ubuntu/data2stdout/tower4clouds-data2stdout 8001 > /home/ubuntu/logs/data2stdout.log 2>&1
-mpl_RETRIEVE_FILES=/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3-SNAPSHOT/hdb.log;/home/ubuntu/logs/data2stdout.log;/home/ubuntu/sda.out;/home/ubuntu/cpu.out;/home/ubuntu/cpuSteal.out;/home/ubuntu/rt.out;/home/ubuntu/d.out;/home/ubuntu/wlforFirst.out;/home/ubuntu/wlforSecond.out;/home/ubuntu/wlforThird.out;/home/ubuntu/wlforFourth.out;/home/ubuntu/wlforFifth.out;/home/ubuntu/wl.out;/home/ubuntu/thresholds.out;/home/ubuntu/modaclouds-sda/SDAData.mat;/home/ubuntu/modaclouds-sda/Forecastingregister_-571442537.mat;/home/ubuntu/modaclouds-sda/ForecastingsaveAnswers_-571442537.mat;/home/ubuntu/modaclouds-sda/ForecastinganswerQuestions_-571442537.mat
+mpl_RETRIEVE_FILES=/home/ubuntu/logs/fuseki.log;/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3-SNAPSHOT/mgr.log;/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3-SNAPSHOT/da.log;/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3-SNAPSHOT/hdb.log;/home/ubuntu/logs/data2stdout.log;/home/ubuntu/sda.out;/home/ubuntu/cpu.out;/home/ubuntu/cpuSteal.out;/home/ubuntu/rt.out;/home/ubuntu/d.out;/home/ubuntu/wlforFirst.out;/home/ubuntu/wlforSecond.out;/home/ubuntu/wlforThird.out;/home/ubuntu/wlforFourth.out;/home/ubuntu/wlforFifth.out;/home/ubuntu/wl.out;/home/ubuntu/thresholds.out;/home/ubuntu/modaclouds-sda/SDAData.mat;/home/ubuntu/modaclouds-sda/Forecastingregister_-571442537.mat;/home/ubuntu/modaclouds-sda/ForecastingsaveAnswers_-571442537.mat;/home/ubuntu/modaclouds-sda/ForecastinganswerQuestions_-571442537.mat;ForecastinggetPage_1862725787.mat
 mpl_SDA_STARTER=bash /home/ubuntu/updateSDA && bash /home/ubuntu/startSDA %s
 mpl_METRICS=CPUUtilization
+mpl_NAME=MPLSDA
