--- a/modaclouds-sdatests/resources/configuration.properties
+++ b/modaclouds-sdatests/resources/configuration.properties
@@ -46,7 +46,7 @@ httpagent_PROTOCOL=http
 httpagent_PORT=8080
 httpagent_STARTER0=bash /home/ubuntu/updateEverything && sudo bash /home/ubuntu/startHTTPAgent %2$s
 httpagent_STARTER1=source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
-httpagent_RETRIEVE_FILES=/tmp/imperial_dc.log
+httpagent_RETRIEVE_FILES=/tmp/imperial_dc.log;/home/ubuntu/logs/catalina.out;/home/ubuntu/logs/catalina.log;/home/ubuntu/logs/host-manager.log;/home/ubuntu/logs/localhost.log;/home/ubuntu/logs/localhost_access_log.txt;/home/ubuntu/logs/manager.log
 httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
 httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 httpagent_METRICS=CPUUtilization
