Removed the dependency to the manager-api, using the REST api call instead.

--- a/modaclouds-scalingrules/pom.xml
+++ b/modaclouds-scalingrules/pom.xml
@@ -381,7 +381,7 @@
 		</dependency>
 		<dependency>
             <groupId>it.polimi.tower4clouds</groupId>
-            <artifactId>manager-api</artifactId>
+            <artifactId>common</artifactId>
             <version>0.3-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
