--- a/modaclouds-scalingsdatests/resources/configuration.properties
+++ b/modaclouds-scalingsdatests/resources/configuration.properties
@@ -65,7 +65,7 @@ database_NAME=DataBase
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-7486c403
-mpl_SIZE=m3.large
+mpl_SIZE=m3.xlarge
 mpl_INSTANCES=1
 mpl_DISK=8
 mpl_OS=Linux/UNIX
@@ -80,3 +80,4 @@ mpl_CLOUDML_PORT=9000
 mpl_MP_PORT=8170
 mpl_METRICS=CPUUtilization
 mpl_NAME=MPLSDA
+mpl_NOT_OVERRIDE_TYPE=true
