--- a/cloudmldaemon/pom.xml
+++ b/cloudmldaemon/pom.xml
@@ -105,7 +105,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
@@ -166,7 +166,7 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -229,6 +229,11 @@
 		<dependency>
 			<groupId>org.cloudml</groupId>
 			<artifactId>websocket</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudml</groupId>
+			<artifactId>ui.shell</artifactId>
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
