--- a/modaclouds-scalingsdatests/pom.xml
+++ b/modaclouds-scalingsdatests/pom.xml
@@ -37,6 +37,10 @@
 			<id>rickdesantis-snapshots</id>
 			<url>https://github.com/rickdesantis/mvn-repo/raw/master/snapshots</url>
 		</repository>
+        <repository>
+            <id>cloudml-snapshots</id>
+            <url>http://cml.cloudapp.net:8081/nexus/content/repositories/snapshots</url>
+        </repository>
 	</repositories>
 
 	<build>
@@ -253,6 +257,11 @@
         <dependency>
             <groupId>org.cloudml</groupId>
             <artifactId>websocket</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cloudml</groupId>
+            <artifactId>ui.shell</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
