--- a/modaclouds-scalingsdatests/resources/configuration.properties
+++ b/modaclouds-scalingsdatests/resources/configuration.properties
@@ -91,12 +91,18 @@ mpl_NAME=MPLSDA
 #mpl_DONT_OVERRIDE_TYPE=true
 
 lb_KEYPAIR_NAME=desantis-ireland
-lb_AMI=ami-62289215
+lb_AMI=ami-47a23a30
 lb_SIZE=m3.large
 lb_INSTANCES=1
 lb_DISK=8
 lb_OS=Linux/UNIX
 lb_SSH_USER=ubuntu
 lb_SSH_PASS=ubuntu
+lb_DOWNLOADER=cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/LB/downloadEverything.sh
+lb_INSTALLER=cd ~ && bash downloadEverything.sh && bash installEverything
+lb_UPDATER=bash /home/ubuntu/updateLoadBalancer
+lb_STARTER=bash /home/ubuntu/startLoadBalancer %s %s
+lb_RETRIEVE_FILES=/var/log/haproxy.log
+lb_PORT=8080
 lb_METRICS=CPUUtilization
 lb_NAME=LB
