--- a/modaclouds-scalingsdatests/resources/configuration.properties
+++ b/modaclouds-scalingsdatests/resources/configuration.properties
@@ -101,8 +101,8 @@ lb_SSH_PASS=ubuntu
 lb_DOWNLOADER=cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/LB/downloadEverything.sh
 lb_INSTALLER=cd ~ && bash downloadEverything.sh && bash installEverything
 lb_UPDATER=bash /home/ubuntu/updateLoadBalancer
-lb_STARTER=bash /home/ubuntu/startLoadBalancer %s %s
-lb_RETRIEVE_FILES=/var/log/haproxy.log
+lb_STARTER=bash /home/ubuntu/startLoadBalancer %s
+lb_RETRIEVE_FILES=/var/log/haproxy.log;/tmp/hrapi.log
 lb_PORT=8080
 lb_METRICS=CPUUtilization
 lb_NAME=LB
